# Scholarhound

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
psil/: backfill.py  cli.py  config.py  frontend.html  frozen_frontend.html  judgment.py  kernel.py  local_import.py  notify.py  relation_llm.py  scholarhound.html  serve.py  state_change.py  trajectory_logic.css  trajectory_logic.js  v3_kernel.py  webui.py
psil/benchmark/: analyze.py  ingest.py  v3_intake.py
psil/compress/: __init__.py  constraints.py
psil/digest/: render.py  vault.py
psil/ingest/: crossref.py  orchestrator.py  rss.py  toc.py
psil/rank/: concepts.py  identity.py  llm.py  scorer.py
psil/store/: db.py  models.py
tests/: test_audit_secretary_briefing.py  test_backfill.py  test_compress.py  test_concepts.py  test_config.py  test_crossref.py  test_db.py  test_frontend.py  test_integration.py  test_judgment.py  test_kernel.py  test_llm.py  test_local_import.py  test_models.py  test_orchestrator.py  test_render.py  test_rss.py  test_scorer.py  test_serve.py  test_source_registry_tool.py  test_state_change.py  test_toc.py  test_v3_intake_benchmark.py  test_v3_kernel.py  test_vault.py
tools/: audit_secretary_briefing.py  build_source_registry.py  migrate_project_pdfs_to_source_store.py  scan_local_pdf_corpus.py
