[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarhound"
version = "0.1.0"
description = "An accountability layer for LLM-assisted scientific literature intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Vonkid" }]
keywords = ["scientific-literature", "research", "llm", "provenance", "evidence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "certifi>=2024.2",
  "click>=8.1",
  "fastapi>=0.110",
  "feedparser>=6.0",
  "numpy>=1.26",
  "openai>=1.0",
  "pyyaml>=6.0",
  "requests>=2.32",
  "scikit-learn>=1.4",
  "sentence-transformers>=3.0",
  "streamlit>=1.35",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://scholarhound.academy/"
Repository = "https://github.com/Vonkid/Scholarhound"
Issues = "https://github.com/Vonkid/Scholarhound/issues"

[project.scripts]
scholarhound = "psil.cli:main"
psil = "psil.cli:main"

[tool.setuptools.packages.find]
include = ["psil*"]

[tool.setuptools.package-data]
psil = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
